# Applied_Robotics

./: Kenges_Korobkina_AR.docx  README.md  Robaka.docx  network.md  package-lock.json  package.json  requirements.txt  rt_tables
Omena stuff/: Nyaa.md
Unitree/: reset_update.sh
Unitree/autostart/: .detailedVersion  .startlist.sh  .startlog  .startlog_bak  publishAppVersion.py  publishRaspiVersion.py
Unitree/autostart/07obstacle/: 07obstacle.sh  start.sh
Unitree/autostart/appTransit/: appTransit.sh
Unitree/autostart/configNetwork/: configNetwork.sh  connectWifi2.sh
Unitree/autostart/roscore/: roscore.sh
Unitree/autostart/sportMode/: keep_sport_alive.sh  log  sportMode.sh
Unitree/autostart/triggerSport/: log  triggerSport.disabled.sh
Unitree/autostart/tunnel/: publish_network_4G.py  publish_uuid.py  run.sh  tunnel.sh
Unitree/autostart/utrack/: run.sh  (+1 more)
Unitree/autostart/utrack/g1_ultrasonic_lcm/lib/ultraSoundSDK_RasPi/: CMakeLists.txt  UltraSound_UART.h  main.cpp
Unitree/autostart/utrack/ultrasonic_listener_example/: CMakeLists.txt  README.md
Unitree/autostart/utrack/ultrasonic_listener_example/include/lcm_msgs/: ultrasonic_data.hpp  ultrasonic_data.lcm
Unitree/autostart/utrack/ultrasonic_listener_example/src/: ultrasonic_listener_lcm.cpp
audiorecorder/: commandsExecutor.js  db.sqlite3  manage.py  package-lock.json  package.json
audiorecorder/audiorecorder/: asgi.py  settings.py  urls.py  wsgi.py
audiorecorder/recorder/: urls.py  views.py
code/: commandsExecutor.js  voice_recognition.py
jstry/: index.js  package-lock.json  package.json
(+93 files in other folders)
